progress(ch5): finish 5.1

--- a/main.tex
+++ b/main.tex
@@ -76,10 +76,11 @@
 }
 
 \definecolor{red}{HTML}{d61111}
-\definecolor{blue}{HTML}{206ac9}
+\definecolor{blue}{HTML}{1356b7}
 \definecolor{green}{HTML}{22b625}
 \definecolor{yellow}{HTML}{ffb206}
-\definecolor{linkblue}{mix}{80,blue,white}
+
+\definecolor{linkblue}{HTML}{206ac9}
 
 \hypersetup{
     colorlinks=true,
@@ -126,18 +127,5 @@
 
 \chapter{Emerging Technologies}
 \subfile{chapters/6_emerging_technologies}
-
-\chapter{Algorithms and Problem Solving}
-\subfile{chapters/7_algorithms_and_problem_solving.tex}
-
-\chapter{Programming}
-\subfile{chapters/8_programming.tex}
-
-\chapter{Databases}
-\subfile{chapters/9_databases.tex}
-
-\chapter{Boolean Logic}
-\subfile{chapters/10_boolean_logic}
-
 
 \end{document}
