--- a/sections/2/error_correction.tex
+++ b/sections/2/error_correction.tex
@@ -45,7 +45,7 @@ To calculate:
     \item Add all odd digits
     \item Add all even digits, and multipy the result by 3
     \item Add the results from steps 1 and 2, and divide the result by 10
-    \item If the remainder is 0, use 0. Otherwise, subtract your result from step 3 from 10. This is your check digit.\footnote{As an example, if you got 6 for step 3, your check digit is $10-6$ or 4.}
+    \item If the remainder is 0, use 0. Otherwise, subtract the remainder from step 3 from 10. This is your check digit.\footnote{As an example, if you got 6 for step 3, your check digit is $10-6$ or 4.}
 \end{enumerate}
 
 To verify:
