--- a/sections/2/ip_and_mac_addresses.tex
+++ b/sections/2/ip_and_mac_addresses.tex
@@ -4,6 +4,7 @@
 \begin{document}
 
 \subsection{IP addresses}
+\label{2:sec:ip}
 
 IP stands for the Internet Protocol, and IP addresses are like street addresses; in the sense that they represent locations on a network. There are 2 main types, IPv4 and IPv6 addresses.
 
@@ -105,6 +106,7 @@ This is by far the most common method.
 \end{itemize}
 
 \subsection{MAC addresses}
+\label{2:sec:mac}
 
 MAC addresses are 48 bit numbers that identify your device uniquely on any given network. They are typically represented as 3 hexadecimal numbers:
 
