--- a/sections/2/packet_switching.tex
+++ b/sections/2/packet_switching.tex
@@ -2,6 +2,7 @@
 \graphicspath{{\subfix{../../images/}}}
 
 \begin{document}
+\label{2:sec:packet_switching}
 
 Sending data across large distances is used all the time, like in video chats, voice chats, uploading homework or simply loading HTML\footnote{This markup language, commonly mistaken for a programming language is what lays out websites; it dictates the structure of the site, like the bricks for a house.}. Typically, sending data like this is done through a stream of \textbf{data packets}, otherwise known as just packets.
 
@@ -45,7 +46,7 @@ Here are they:
 
 Packet switching is the next step after slicing up data into packets. This is done because sending data across large distances all at once is prone to failure (what happens if a slight portion of the data is corrupted? the data must be sent all over again, taking time). 
 
-This technique involves sending packets onto multiple paths that reach the same destination. They begin by being sent out onto the network; they travel seperately but at the same time and when all the packets arrive at the destination, they are put back together via the sequence number. The role of the router on each node is to determine the next router the packet should go to. 
+This technique involves sending packets onto multiple paths that reach the same destination. They begin by being sent out onto the network; they travel seperately but at the same time and when all the packets arrive at the destination, they are put back together via the sequence number. The role of the router on each node is to determine the next router the packet should go to. For more information on routers, see \ref{3:sec:routers} 
 
 \begin{figure}[h]
     \centering
