--- a/sections/4/the_os_and_kernel.tex
+++ b/sections/4/the_os_and_kernel.tex
@@ -14,9 +14,9 @@ A computer without an operating system is like a human without a soul. Without a
 
 Figure \ref{fig:software_stack} shows the software that exists on your computer. All of this is stored in secondary storage on your boot device.
 
-\subsection{The OS and System Software}
+\subsection{The OS}
 
-The operating system itself is a large set of programs that mainly run directly on the CPU, that gives the user an inteface to interact with the computer and connected devices, along with a mechanism to run programs, among others. The tasks that the OS carries out include:
+The operating system itself is a large set of programs that mainly run directly on the CPU. \emph{It gives the user an interface for them to interact with the computer}, along with carrying out other tasks. The OS:
 
 \begin{enumerate}
     \item Loads device drivers for hardware and creates abstractions for application and utility software.
@@ -32,7 +32,11 @@ The operating system itself is a large set of programs that mainly run directly 
 
 Major Operating Systems include Microsoft Windows, Apple's macOS, Linux (GNU/Linux), and the *BSD family, among others. This is the reason why the interface you get when you use a Lenovo laptop, for example is different from if you use a Macintosh; the operating systems they use is different.
 
-The kernel is simply a part of the operating system that creates the abstractions for hardware, so that userspace software can interact with it. On the list provided previously, items 1-5 is handled by the operating system, and the rest through special system software that is commonly grouped together with the OS. 
+\paragraph{The kernel}
+
+\textbf{This is a crucial part of the OS} that is not explicitly mentioned in your syllabus\footnote{Thanks, Cambridge!} It is a part of the operating system that creates a layer on top of your hardware, so that other software, like system software can interact with it. \textbf{For IGCSE, it is grouped together with system software.}
+
+Items 1-5 in the list above is actually handled by the kernel, and the rest is handled by \emph{special system software that is usually just called the OS.}
 
 \subsubsection{Device Drivers}
 
