--- a/sections/3/data_storage.tex
+++ b/sections/3/data_storage.tex
@@ -183,7 +183,7 @@ These devices typically hold larger amounts of data, such as a lot of films, gam
 
 \subsection{SSDs (Solid state drives)}
 
-SSDs or solid state drives, are like HDDs; they can store large amounts of data and are \textbf{secondary storage} devices. Instead of using magnetic discs as the medium, they use NAND flash chips, powered by transistors and NAND gates (see \ref{10:sec:logic_gates}.)
+SSDs or solid state drives, are like HDDs; they can store large amounts of data and are \textbf{secondary storage} devices. Instead of using magnetic discs as the medium, they use NAND flash chips, powered by transistors and NAND gates.
 
 They are typically used in place of HDDs where fast storage is needed; like the startup disk/boot device used to store the operating system, and in mission-critical environments where fast data access is absolutely required. Using these in place of an HDD makes the computer feel snappier as there is no mechanical arm and spinning motor needed to access data.
 
