--- a/sections/4/system_startup.tex
+++ b/sections/4/system_startup.tex
@@ -3,7 +3,7 @@
 
 \begin{document}
 
-System startup is defined as the process the computer takes from being complteely shut off (no current passing through the CPU) to running the operating system, able to execute multiple processes. The process by which this happens is:
+System startup is defined as the process the computer takes from being completely shut off (no current passing through the CPU) to running the operating system, able to execute multiple processes. The process by which this happens is:
 
 \begin{itemize}
     \item \textbf{The BIOS} is loaded into RAM. This is stored on a small ROM (EEPROM) chip on the motherboard, and it contains important code that performs hardware initialization. This means that all the hardware connected to the I/O controller, like all the ports, the display, keyboard, mouse and even RAM is initialized and acknowledged.
