--- a/sections/4/translators_compilers_and_interpreters.tex
+++ b/sections/4/translators_compilers_and_interpreters.tex
@@ -11,7 +11,7 @@ High level (HLLs) and Low level languages (LLLs) are categories used to describe
 
 \paragraph{High-level languages}
 
-HLLs allows the programmer to focus on the problem itself, without the prgorammer needing to know anything about the CPU the code will be ran on. They are designed with programmers in mind; they provide human-like features like if statements, loops, procedures and other things a human would find natural to have when giving a machine instructions. 
+HLLs allows the programmer to focus on the problem itself, without the programmer needing to know anything about the CPU the code will be ran on. They are designed with programmers in mind; they provide human-like features like if statements, loops, procedures and other things a human would find natural to have when giving a machine instructions. 
 
 \begin{itemize}
     \item Read and understand the code better, as it is closer to English
