--- a/sections/3/von_neumann.tex
+++ b/sections/3/von_neumann.tex
@@ -53,13 +53,13 @@ Inside the CPU, there are many important components that are critical to its fun
 
 The Control Unit, or CU is like the boss of your CPU. All operations that involve sending data to and from memory or interacting with I/O devices like the mouse and keyboard (refer to figure \ref{fig:vonneumann}) is done by the control unit. It is also responsible for decoding instructions for the CPU to execute.
 
-The ALU or the Arithmetic Logic Unit is responsible for performing all mathematical and logical operations, like addition, multiplication and so on, along with AND, OR, NOT, etc. For more information on logical operations, see section \ref{10:sec:logic_gates}.
+The ALU or the Arithmetic Logic Unit is responsible for performing all mathematical and logical operations with logic gates, like addition, multiplication and so on, along with AND, OR, NOT, etc.
 
 Registers, like RAM is for fast data storage. The main difference between registers and main memory is that registers are built into the CPU itself. Registers store very little data, typically only 64 bit integers; but are much, much faster than main memory. They also typically serve special purposes. In the diagram, there are 5 important registers that are important for CPU operation.
 
 \begin{itemize}
     \item \textbf{The Program Counter (PC)} is a special register that stores the \emph{address} of the current instruction that is being run by the CPU.
-    \item \textbf{The Accumulator} is another special register in the CPU that stores intermediate results of arithmetic or logical operations, like the result of $3+5$ or $1 OR 0$. It can accumulate data over time for longer chains of instructions\footnote{In modern CPUs, there is no accumulator. There are so many general-purpose registers that any one can act as an accumulator.}
+\item \textbf{The Accumulator} is another special register in the CPU that stores intermediate results of arithmetic or logical operations, like the result of $3+5$ or {\ccmono 1 OR 0}. It can accumulate data over time for longer chains of instructions\footnote{In modern CPUs, there is no accumulator. There are so many general-purpose registers that any one can act as an accumulator.}
     \item \textbf{The Current Instruction Register (CIR)} stores the current instruction being executed. This differs from the PC, as the PC stores the \emph{location} of the instruction, whereas the CIR stores the instruction itself.
     \item \textbf{The Memory Address Register (MAR)} stores addresses in memory that must be read from or written to.
     \item \textbf{The Memory Data Register (MDR)} stores the data that must be read from or written to memory. This differs from the MAR, as the MAR stores \emph{locations} (addresses), whereas the MDR stores the locations themselves.
