progress: finish INITIAL DRAFT

--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,7 @@
 \documentclass[a4paper, oneside, 11pt]{book} % we are not printing this like a book
 \usepackage[hmargin=2cm,vmargin=2.5cm,bindingoffset=0.5cm]{geometry}
 \usepackage[colorlinks=true]{hyperref}
+\usepackage{csquotes}
 \usepackage{bookmark}
 \usepackage{graphicx}
 \usepackage{subfiles}
