--- a/sections/4/translators_compilers_and_interpreters.tex
+++ b/sections/4/translators_compilers_and_interpreters.tex
@@ -3,7 +3,7 @@
 
 \begin{document}
 
-Translators (dissmilar to Google Translate or DeepL) translates programming languages into different programming languages. All of this is done so that at one point, code that you write can be translated into the raw instructions that your CPU understands, known as \textbf{machine code}. There are 3 main types of translators that you must be aware of for your final exam.
+Translators (dissimilar to Google Translate or DeepL) translates programming languages into different programming languages. All of this is done so that at one point, code that you write can be translated into the raw instructions that your CPU understands, known as \textbf{machine code}. There are 3 main types of translators that you must be aware of for your final exam.
 
 \subsection{High-level and Low-level languages}
 
