--- a/sections/5/the_internet_and_the_www.tex
+++ b/sections/5/the_internet_and_the_www.tex
@@ -20,7 +20,7 @@ In summary, the internet are the connections between physical infrastructure tha
 
 \subsection{URLs (Uniform Resource Locators)}
 
-Web browsers, or just browsers allows you to view content on the WWW. Browsers interpret HTML\textbf{Hypertext Markup Langauge}, which is a specific programming language that defines the basic component and the text in a webpage, think the bricks in your house. To access these files, the browser must visit a URL, which locates a location on the WWW. They look as follows:
+Web browsers, or just browsers allows you to view content on the WWW. Browsers interpret HTML\footnote{Hypertext Markup Langauge}, which is a specific programming language that defines the basic component and the text in a webpage, think the bricks in your house. To access these files, the browser must visit a URL, which locates a location on the WWW. They look as follows:
 
 \begin{figure}[H]
     \centering
