--- a/sections/6/automated_systems.tex
+++ b/sections/6/automated_systems.tex
@@ -22,7 +22,7 @@ The typical automated system involves:
 
 \begin{itemize}
     \item Sensors constantly provide readings
-    \item Programs (run on the microprocessor\footnote{Like a CPU, it is an integrated circuit on a single chip} of the device and processes the readings. If the data is analog, it invokes an ADC\footnote{An analog to digital converter, this converts continuous analog data with an infinite decimal range to binary 1’s and 0’s with a finite and defined range, so a computer can make sense of it.}
+    \item Programs (run on the microprocessor\footnote{Like a CPU, it is an integrated circuit on a single chip} of the device and processes the readings). If the data is analog, it invokes an ADC\footnote{An analog to digital converter, this converts continuous analog data with an infinite decimal range to binary 1’s and 0’s with a finite and defined range, so a computer can make sense of it.}
     \item The program either logs it or invokes an actuator\footnote{Another term tested in the previous examination, these are devices that can be controlled via a program that change the surrounding environment; like a solenoid that pushes things around, or a (bigger) piston, pump, valve, etc.} to reflect something.
 \end{itemize}
 
@@ -69,6 +69,6 @@ Automated systems have a lot of applications (Taken from textbook and syllabus).
     \item \textbf{Automated systems that connect to networks are subject to cyber-attacks}, which may halt critical processes.
 \end{itemize}
 
-In call cases, automated systems can help the vast majority of people in these industries speed up boring and repetitive tasks. More info can be found in the textbook (pages 218~229 all contain examples).
+In all cases, automated systems can help the vast majority of people in these industries speed up boring and repetitive tasks. More info can be found in the textbook (pages 218~229 all contain examples).
 
 \end{document}
